--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,3 +1,6 @@
 //Font Awesome
 $fa-font-path:"../../assets/fonts";
 @import "../../../node_modules/font-awesome/scss/font-awesome";
+
+//Google Fonts
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:600,700|Syncopate:700');
