--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,3 +5,7 @@
 @import "base/variables";
 @import "base/mixins";
 @import "base/global";
+
+@import "modules/site-header";
+@import "modules/btn";
+@import "modules/hero";
