Styled CTA and About Us section

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -3,4 +3,4 @@ $fa-font-path:"../../assets/fonts";
 @import "../../../node_modules/font-awesome/scss/font-awesome";
 
 //Google Fonts
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Raleway:600,700|Syncopate:700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400|Raleway:300,700|Syncopate:700');
