--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,3 +9,6 @@
 @import "modules/site-header";
 @import "modules/btn";
 @import "modules/hero";
+@import "modules/cta";
+@import "modules/wrapper";
+@import "modules/about-us";
