--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -13,10 +13,20 @@ img {
 
 h1, h2, h3 ,h4 ,h5 ,h6 {
     font-family: $font-family-headers;
+    color: $white;
 }
 
 h1 {
     @include media-breakpoint-up(md) {
         font-size: 4.5rem;
     }
+}
+
+h2 {
+    font-size: 2.5rem;
+}
+
+p {
+    color: $white;
+    font-weight: 300;
 }
