--- a/src/scss/modules/_btn.scss
+++ b/src/scss/modules/_btn.scss
@@ -7,8 +7,10 @@
     }
 }
 
-.btn-lg {
-    padding: 1rem 4rem;
+.btn-xlg {
+    padding: 1rem 4.5rem;
+    
+    font-size: 1.25rem;
     @include media-breakpoint-up(md)  {
         padding: 1.5rem 6rem;
     }
