--- a/src/scss/modules/_btn.scss
+++ b/src/scss/modules/_btn.scss
@@ -1,3 +1,13 @@
+.btn-primary {
+    background: $accent-color;
+    border: none;
+
+    &:focus, &:hover {
+        background: lighten($accent-color, 5%);
+        border: none;
+    }
+}
+
 .btn-outline-secondary {
     border: 2px solid $white;
 
@@ -9,7 +19,7 @@
 
 .btn-xlg {
     padding: 1rem 4.5rem;
-    
+
     font-size: 1.25rem;
     @include media-breakpoint-up(md)  {
         padding: 1.5rem 6rem;
