Styled Quote and Contact Us sections

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,3 +15,5 @@
 @import "modules/our-trainers";
 @import "modules/subscriptions";
 @import "modules/testimonials";
+@import "modules/quote";
+@import "modules/contact-us";
