Fixed images and fonts paths for production

--- a/src/scss/modules/_contact-us.scss
+++ b/src/scss/modules/_contact-us.scss
@@ -1,5 +1,5 @@
 .contact-us {
-    background: url("../../assets/images/dumbbells-932426_1920.jpg") center center;
+    background: url("../assets/images/dumbbells-932426_1920.jpg") center center;
     background-size: cover;
     @include overlay($dark-gray, .99);
 
