--- a/src/scss/modules/_cta.scss
+++ b/src/scss/modules/_cta.scss
@@ -27,7 +27,7 @@
 }
 
 .cta-secondary {
-    background: url("../../assets/images/weights-646496_1920.jpg") center center;
+    background: url("../assets/images/weights-646496_1920.jpg") center center;
     background-size: cover;
     @include overlay(#000, .8);
     text-align: center;
