--- a/src/scss/modules/_hero.scss
+++ b/src/scss/modules/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url("../../assets/images/man-1282232.jpg") center center;
+    background: url("../assets/images/man-1282232.jpg") center center;
     background-size: cover;
     height: 100%;
     display: flex;
