--- a/src/scss/modules/_modal.scss
+++ b/src/scss/modules/_modal.scss
@@ -21,7 +21,7 @@
 	}
 
 	.modal-content {
-		background: url("../../assets/images/man-1282232.jpg") no-repeat center center;
+		background: url("../assets/images/man-1282232.jpg") no-repeat center center;
 		background-size: cover;
 
 		.form-modal {
