--- a/src/scss/modules/_quote.scss
+++ b/src/scss/modules/_quote.scss
@@ -1,5 +1,5 @@
 .quote {
-    background: url("../../assets/images/weights-664765.jpg") center center;
+    background: url("../assets/images/weights-664765.jpg") center center;
     background-size: cover;
     @include overlay(#000, .85);
 
