Added responsive images

--- a/src/scss/modules/_our-trainers.scss
+++ b/src/scss/modules/_our-trainers.scss
@@ -9,6 +9,12 @@
 
     .card {
         border: none;
+        max-width: 21.875rem;
+        margin: 0 auto;
+
+        @include media-breakpoint-down(md){
+            margin-bottom: 2rem;
+        }
 
         .card-block {
             background: $dark-gray;
