Added webpack and animations script

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@
 
 @import "modules/site-header";
 @import "modules/btn";
+@import "modules/animate";
 @import "modules/hero";
 @import "modules/cta";
 @import "modules/wrapper";
